# simple-nas

./: Cargo.toml  README.md  deny.toml
memory_bank/: activeContext.md  build-verification.md  implementationPlan.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
migrations/: 001_initial.sql  20250629_initial.down.sql  20250629_initial.up.sql
specs/: 000-design-prd.md
specs/conversations/: 001-design-talk.md  002-memory-bank.md
specs/helpers/: sqlx-db-tester.md
src/: lib.rs  main.rs
src/config/: app.rs  settings.rs
src/database/: mod.rs  models.rs  schema.rs  service.rs
src/handlers/: auth.rs  files.rs  mod.rs  shares.rs  system.rs
src/middleware/: auth.rs  mod.rs
src/routes/: mod.rs  route.rs
src/services/: mod.rs
src/utils/: mod.rs
tests/database/: tests.rs
