[package]
name = "simple-nas"
version = "0.1.0"
authors = ["wty92911 <2066946886@qq.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/wty92911/simple-nas"
homepage = "https://github.com/wty92911/simple-nas"
description = "A simple, secure home NAS system built with Rust and React"
readme = "README.md"
categories = ["web-programming", "filesystem"]
keywords = ["nas", "file-server", "web", "axum"]

[[bin]]
name = "simple-nas"
path = "src/main.rs"

[dependencies]
# Web framework and async runtime
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database - PostgreSQL specific
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Authentication and security
argon2 = "0.5"
jsonwebtoken = "9.0"
sha2 = "0.10"
rand = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# File handling
mime_guess = "2.0"
bytes = "1.0"
sqlx-db-tester = { git = "https://github.com/tyrchen/sqlx-db-tester" }

[dev-dependencies]
tempfile = "3.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
tokio-test = "0.4"
